--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
         London
         United Kingdom
         W1B 3HH
-        Email: info@Smartay.com
+        Email: info@smartay-edu.com
         <br/>
         <br/>
     </div>
@@ -132,7 +132,7 @@
         555 Nathan Road
         Kowloon
         Hong Kong
-        email: info@Smartay.com
+        email: info@smartay-edu.com
 
     </div>
     <div class="col-xs-12" >
