--- a/parents.html
+++ b/parents.html
@@ -68,8 +68,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <span>
-                    <img src="img/logo.png" height="70" alt="Smartay"/> &nbsp;
+                 <span>
+                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
             </a>
 
