--- a/advantage.html
+++ b/advantage.html
@@ -69,7 +69,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" height="70" alt="Smartay"/> &nbsp;
+                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
             </a>
 
