--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
                 <span>
-                    <img width="50" height="50" src="img/logo.png" alt="Smartay"/>
+                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
       </a>
     </div>
