--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
         }
         /*END OF BASE*/
 
+
+        .jumbotron-billboard .img {
+            margin-bottom: 0px;
+            opacity: 0.2;
+            color: #fff;
+            background: #000 url("img/trinity.jpg") top center no-repeat;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            overflow: hidden;
+            position:absolute;
+            top:0;
+            left:0;
+            z-index:1;
+        }
+        .jumbotron h2 {margin-top:0;}
+        .jumbotron {
+            position:relative;
+            padding-top:50px;
+            padding-bottom:50px;
+        }
+        .jumbotron .container {
+            position:relative;
+            z-index:2;
+        }
+
+        @media screen and (max-width: 768px) {
+            .jumbotron {
+                padding-top:20px;
+                padding-bottom:20px;
+            }
+        }
+
     </style>
 </head>
 
@@ -68,7 +101,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" height="70" alt="Smartay"/> &nbsp;
+                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
             </a>
 
@@ -90,36 +123,38 @@
 </nav>
 
 
+<div class="jumbotron jumbotron-billboard">
+    <div class="img"></div>
+    <div class="container">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row" style="color: black">
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6">
+                <h1 class="text-center" >Smartay</h1>
 
-<div class="row">
-    <div class="col-xs-12" >
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-    </div>
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6">
-        <h1 class="text-center" style="color: black">Smartay</h1>
-        <h3 class="text-center" style="color: black">Connecting UK Boarding Schools and International Students</h3>
-        <hr>
-        <div class="col-xs-offset-1 col-xs-4 col-sm-offset-1 col-sm-4 " >
-            <a href="schools.html" class="btn btn-lg btn-success" role="button">For Schools</a>
-        </div>
-        <div class="col-xs-offset-1 col-xs-4 col-sm-offset-1 col-sm-4">
-            <a href="parents.html" class="btn btn-lg btn-success" role="button">For Parents</a>
-        </div>
 
-    </div>
-    <div class="col-xs-12" >
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+                <h4>Smartay Education was founded with the aim to improve education via
+                    technology, teacher training and study exchange.</h4>
+
+                <h4>Having been involved in various Department for Education Steering
+                    Committees, the founders have decades of experience in educational
+                    technology and service, working with national governments and school
+                    associations.</h4>
+
+                <h4>Our services have been used in schools and universities across the UK and abroad. We were recognised by the Mayor of London and were shortlisted
+                    for the “Fasting Growing Business in the UK education Industry” award.</h4>
+
+                <h4>Today, we are actively looking to transform education by providing schools with great methodology and technology.</h4>
+
+            </div>
+        </div>
     </div>
 </div>
+
+
 
 <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
