--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@
 <div class="jumbotron jumbotron-billboard">
     <div class="img"></div>
     <div class="container">
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+
         <div class="row" style="color: black">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
             <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6">
                 <h1 class="text-center" >Smartay</h1>
 
@@ -150,10 +151,65 @@
                 <h4>Today, we are actively looking to transform education by providing schools with great methodology and technology.</h4>
 
             </div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
         </div>
     </div>
 </div>
 
+
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+<div class="jumbotron jumbotron-billboard">
+    <div class="img"></div>
+    <div class="container">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row" style="color: black">
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6">
+                <h1 class="text-center" >Microsoft 365 Education</h1>
+
+
+                <h4>Empower teachers to unlock creativity, promote teamwork, and provide a simple and safe experience in a single, affordable solution built for education.
+
+                </h4>
+
+                <h3>BI-LINGUAL PLATFORM</h3>
+                <h4>Users have the ability to easily switch between Vietnamese and English at any time.</h4>
+
+                    <h3>MULTIPLE CLASSROOM FUNCTIONS</h3>
+                    <h4>Students have access to everyday teaching, course notes, school events and various learning tools through simple dashboards.</h4>
+
+                        <h3>ASSIGNMENTS</h3>
+                        <h4>Our inbuilt assignment tool allows teachers to select individual learners for differentiated homework, enabling greater tracking and monitoring.</h4>
+
+                            <h3>EXAM</h3>
+                            <h4>“Smartay+365 Exam” is integrated into our platform for school and ministry of education exams. It delivers results through a full analytics and reporting
+                package.</h4>
+
+                                <h3>PARENTS</h3>
+                                <h4>Access to data from mobile devices encourages parental involvement and improves education outcomes.</h4>
+
+                                    <h3>SECURITY</h3>
+                                    <h4>A national project will have hundreds of thousands, or even millions of students, on a common platform. Our proven technology protects student identities and data in the secured Microsoft Azure cloud no matter the size.</h4>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script
