--- a/guardianship.html
+++ b/guardianship.html
@@ -70,7 +70,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
+                    <img src="img/logo.png?cacheBust=true" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
             </a>
 
