--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" height="40" alt="Smartay"/> &nbsp; Smartay
+                    <img src="img/logo.png?cacheBust=true" height="40" alt="Smartay"/> &nbsp; Smartay
                 </span>
       </a>
     </div>
@@ -54,7 +54,7 @@
       </button>
       <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" width="30" height="30" alt="Smartay"/> &nbsp;
+                    <img src="img/logo.png?cacheBust=true" width="30" height="30" alt="Smartay"/> &nbsp;
                 </span>
       </a>
     </div>
