--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             </button>
             <a class="navbar-brand" href="/">
                 <span>
-                    <img src="img/logo.png" height="70" alt="Smartay"/> &nbsp;
+                    <img src="img/logo.png?cacheBust=true" height="70" alt="Smartay"/> &nbsp;
                 </span>
             </a>
 
